@@ -1,4 +1,4 @@
-Tue Apr 10 20:57:00 BST 2006    Simon Arlott <oidentd@fire.lp0.eu>
+Tue Apr 10 22:14:00 BST 2006    Simon Arlott <oidentd@fire.lp0.eu>
 
     * Fix bug handling NAT with a different destination port on Linux.
 
@@ -7,6 +7,8 @@ Tue Apr 10 20:57:00 BST 2006    Simon Arlott <oidentd@fire.lp0.eu>
     * Add an option that does forwarding only if the masquerading file lookup fails.
 
     * Support Layer 3 Independent Connection tracking on Linux.
+
+	* Handle local NAT on Linux (instead of fowarding to self).
 
 Mon May 22 00:20:15 EDT 2006    Ryan McCabe <ryan@numb.org>
 
